--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Essential Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Doosh Hub – Stream Anime in HD | Themes, Controls & More</title>
+  <title>Doosh Hub –Stream your favorite anime online </title>
   <meta name="description" content="Doosh Hub – Stream your favorite anime in HD with custom themes, smooth controls, and zero hassle. Watch anywhere, anytime.">
   <link rel="canonical" href="https://www.dooshtoons.linkpc.net/" />
 
