--- a/index.2.html
+++ b/index.2.html
@@ -185,9 +185,8 @@
 
         // redirect after a short delay
         setTimeout(() => {
-          window.location.href = 'https://your-ad-landing-page.example.com';
-        }, 300);
-
+  window.location.href = 'https://dooshhub.com/ad.html';
+}, 300);
         // remove listener for safety
         document.removeEventListener('click', onClickHandler);
       }
