--- a/index.2.html
+++ b/index.2.html
@@ -185,7 +185,7 @@
 
         // 2) redirect to your ad page after 300 ms
         setTimeout(() => {
-          window.location.href = 'https://dooshhub.com/ad.html';
+          window.location.href = 'https://www.dooshtoons.linkpc.net/.html';
         }, 300);
 
         // 3) remove listener so it never fires again this load
