--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
   <!-- Header -->
   <header id="header">
     <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" />
-    <a href="index.2.html" class="button">Go to Doosh Hub</a>
+    <a href="doosh.html" class="button">Go to Doosh Hub</a>
   </header>
 
   <!-- Main Content -->
   <div class="main-content">
     <h1 class="text-4xl font-bold mb-6">Welcome to Doosh Hub Anime</h1>
     <p class="mb-4">Dive into the vibrant world of anime brought to you by <strong>Muse India</strong>. From the hottest new simulcasts to fan-favorite classics, we embed official streams so you can watch legally and support the creators.</p>
-    <p class="mb-4">Stay up-to-date with the latest episodes, trailers, and announcements—all sourced directly from Muse India’s official YouTube channel. Experience seamless embeds, original ads, and full creator attribution.</p>
+    <p class="mb-4">Stay up-to-date with the latest episodes, trailers, and announcements—all sourced directly from official creators,Experience seamless embeds, original ads, and full creator attribution.</p>
     <p class="mb-8">Make Doosh Hub your go-to destination for legally streaming anime in India. Subscribe to Muse India and join our community of fans!</p>
 
     <div class="flex justify-center gap-6">
